[gd_scene load_steps=10 format=2]

[ext_resource path="res://ScenesNScripts/Enemies/Projectile/Projectile.gd" type="Script" id=1]
[ext_resource path="res://ScenesNScripts/HBoxes/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/za sfera/sprite_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/za sfera/sprite_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/za sfera/sprite_0.png" type="Texture" id=7]
[ext_resource path="res://Assets/za sfera/sprite_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/za sfera/sprite_1.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[node name="Projectile" type="KinematicBody2D"]
script = ExtResource( 1 )
health = 1.0

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[editable path="HitBox"]
